ggspectra 0.3.6 (2020-04-xx)
============================

* Revise for compatibility with 'dplyr' (>= 1.0.0).
* Track changes in 'photobiology' 0.10.0.
* Fix two bugs in ggplot() method for class object_spct.
* Add stat_spikes(), useful for highlighting spikes.
* Fitted peaks and valleys are now supported (experimental).
* TODO Add summaries as inset tables.

ggspectra 0.3.5 (2020-01-15)
============================

* Revise ggplot() methods so that the class and attributes of spectral objects
are retained in the "data" member of the "gg" object. This allows use of methods
specific to spectra in data transformations.
* Track changes in 'photobiology' 0.9.30.

ggspectra 0.3.4 (2019-09-11)
============================

* Update for code-breaking changes in 'tidyr' (>= 1.0.0).

ggspectra 0.3.3-1 (2019-06-09)
==============================

* Add convenience functions to make easier to modify plotting options:
set_annotations_default() and set_w.band_default().
* Add support for simultaneously adding and removing annotations from the
current default by accepting lists of character vectors as argument for
parameter annotations in autoplot() methods.
* Add support in multiplot() for adding a title to the composite figure.
* Add support for setting of the plot caption with autotitle() and as
annotations in autoplot() methods. Make autotitle() a synonim of ggtitle_spct(),
which is now deprecated.
* Track changes in 'photobiology' (>= 0.9.28) adding support fot "how.measured"
attribute in plot titles, subtitles and captions.
* Use a compute panel function instead of a compute group function in
stat_wb_label(), stat_wb_box() and stat_wl_strip(), solving a bug affecting
autoplot() methods when called with multiple spectra.

ggspectra 0.3.2 (2019-02-19)
============================

* Move 'ggplot2' from Imports: to Depends: as the objects returned belong to
classes defined in this package.
* Move 'photobiology' from Imports: to Depends: as the objects accepted as input