@@ -58,6 +58,7 @@ export(StatWbRelative)
 export(StatWbSIrrad)
 export(StatWbTotal)
 export(StatWlSummary)
+export(StatWlsAt)
 export(Tfr_internal_label)
 export(Tfr_total_label)
 export(autotitle)
@@ -123,6 +124,7 @@ export(stat_wb_sirrad)
 export(stat_wb_total)
 export(stat_wl_strip)
 export(stat_wl_summary)
+export(stat_wls_at)
 export(subtitle_spct.generic_spct)
 export(title_spct)
 export(w_frequency)
